# GABR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate.bat  submodules.bat
gabr/gabrAudio/: CMakeLists.txt
gabr/gabrAudio/audio/: audioManager.cpp  audioManager.h
gabr/gabrCore/: CMakeLists.txt
gabr/gabrCore/core/: application.cpp  application.h  core.h  entrypoint.cpp  entrypoint.h
gabr/gabrCore/time/: fpslimit.cpp  fpslimit.h  timer.cpp  timer.h
gabr/gabrEntity/: CMakeLists.txt
gabr/gabrEntity/entity/: entity.cpp  entity.h  entityManager.cpp  entityManager.h
gabr/gabrInput/: CMakeLists.txt
gabr/gabrInput/input/: input.cpp  input.h
gabr/gabrLog/: CMakeLists.txt
gabr/gabrLog/asserts/: asserts.h
gabr/gabrLog/log/: logger.cpp  logger.h
gabr/gabrPch/: CMakeLists.txt  gabrPch.h
gabr/gabrPlatform/: CMakeLists.txt  api.h
gabr/gabrRender/: CMakeLists.txt
gabr/gabrRender/rendering/: animation.cpp  animation.h  camera.cpp  camera.h  renderer.cpp  renderer.h  renderingManager.cpp  renderingManager.h  shader.cpp  shader.h  sprite.cpp  sprite.h  texture.cpp  texture.h
gabr/gabrRender/window/: window.cpp  window.h
gabr/gabrScenes/: CMakeLists.txt
gabr/gabrScenes/scenes/: scene.cpp  scene.h  sceneManager.cpp  sceneManager.h
shaders/: buildShaders.bat  frag.sc
